Add composer files

--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
     },
     "authors": [
         {
-            "name": "Matthieu Mota",
-            "email": "matthieumota@gmail.com"
+            "name": "julie-vandenberghe",
+            "email": "julie.vandenberghe.59@gmail.com"
         }
     ],
     "require": {
